tests/invalid/trait/method_call_short_missing_impl.facet
trait Runner {
  fn run(self: Self) -> ();
}

fn main(x: unrestricted isize) -> unrestricted () {
  (Runner::run x)
}
